# 42api.rs

./: .gitignore  Cargo.toml
src/: access_token.rs  lib.rs  req.rs  test.rs  user.rs
src/endpoint/: project.rs  user.rs
